# PyCG

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements-dev.txt  setup.py  setup_devenv.sh
.github/workflows/: linters.yml  test.yaml
benchmark/: create_pytests.py
micro-benchmark/: args_test.py  assignments_test.py  base.py  builtins_test.py  classes_test.py  decorators_test.py  dicts_test.py  direct_calls_test.py  dynamic_test.py  exceptions_test.py  external_test.py  functions_test.py  generators_test.py  imports_test.py  kwargs_test.py  lambdas_test.py  lists_test.py  mro_test.py  returns_test.py
micro-benchmark-key-errs/: base.py
pycg/: __main__.py  preprocessor.py  pycg.py  representations.py  utils.py
pycg/formats/: __init__.py  as_graph.py  base.py  fasten.py  linenumber.py  simple.py
pycg/machinery/: callgraph.py  classes.py  definitions.py  imports.py  key_err.py  modules.py  pointers.py  scopes.py
pycg/processing/: base.py  cgprocessor.py  keyerrprocessor.py  postprocessor.py  preprocessor.py
pycg/scripts/: cleanup_py_files.py
pycg/test_suite/: base.py  functions_test.py  imports_test.py
pycg/tests/: base.py  callgraph_test.py  definitions_test.py  fasten_format_test.py  imports_test.py  pointers_test.py  scopes_test.py
pycg/utils/: __init__.py  common.py  constants.py
test_suite/: args_test.py  assignments_test.py  base.py  builtins_test.py  create_pytests.py  direct_calls_test.py  functions_test.py  imports_test.py  kwargs_test.py  lambdas_test.py  returns_test.py
test_suite/snippets/assigned_function_call/: README.md
test_suite/snippets/assigned_function_call_with_lit_param/: README.md  main.py
test_suite/snippets/assigned_parameter_function_call/: main.py
test_suite/snippets/chained_assignment/: main.py
test_suite/snippets/chained_import/: README.md
test_suite/snippets/direct_call_with_parameters/: README.md
test_suite/snippets/function_call_with_assigned_kwarg/: README.md  callgraph.json
test_suite/snippets/function_call_with_kwargs_chained/: callgraph.json
test_suite/snippets/import_from/: callgraph.json
test_suite/snippets/imported_function_call/: callgraph.json
test_suite/snippets/imported_function_return_call/: README.md  main.py
test_suite/snippets/lambda_calls_parameter/: README.md  (+1 more)
(+484 files in other folders)
