[project]
name = "PyCG"
version = "0.0.7"

description = "PyCG - Practical Python Call Graphs"
readme = "README.md"
requires-python = ">=3.4"

[project.urls]
"Homepage" = "https://github.com/vitsalis/PyCG"
"Bug Tracker" = "https://github.com/vitsalis/PyCG/issues"

[tool.black]
line-length = 88
target_version = ['py38', 'py39', 'py310']
preview = true
exclude = '''
/(
    \.eggs         # exclude a few common directories in the
  | \.git          # root of the project
  | \.mypy_cache
  | \.vscode
  | build
  | dist
  | micro-benchmark
  | micro-benchmark-key-errs
)/
'''

[tool.ruff]
# Do not enforce `E501` (line length violations) for now.
ignore = ["E501"]

exclude = [
    "micro-benchmark",
    "micro-benchmark-key-errs"
]

# Ignore `E402` (import violations) in all `__init__.py` files
[tool.ruff.per-file-ignores]
"__init__.py" = ["E402", "F401"]


[tool.isort]
profile = "black"
